Bug 29453 - [gdb/symtab] read.h:309: internal-error: set_length: Assertion `m_length == length' failed
Summary: [gdb/symtab] read.h:309: internal-error: set_length: Assertion `m_length == l...
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: symtab (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 13.1
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-07 06:59 UTC by Tom de Vries
Modified: 2022-09-14 08:46 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom de Vries 2022-08-07 06:59:06 UTC
With this change:
...
diff --git a/gdb/testsuite/gdb.dwarf2/debug-names.exp b/gdb/testsuite/gdb.dwarf2/debug-names.exp
index 0af5a93bea8..f82e53d5cba 100644
--- a/gdb/testsuite/gdb.dwarf2/debug-names.exp
+++ b/gdb/testsuite/gdb.dwarf2/debug-names.exp
@@ -29,7 +29,7 @@ set func_info_vars \
 set asm_file [standard_output_file $srcfile2]
 Dwarf::assemble {
     filename $asm_file
-    add_dummy_cus 0
+    add_dummy_cus 1
 } {
     global func_info_vars
     foreach var $func_info_vars {
...
we run into:
...
(gdb) break _start^M
/home/vries/gdb_versions/devel/src/gdb/dwarf2/read.h:309: internal-error: set_length: Assertion `m_length == length' failed.^M
A problem internal to GDB has been detected,^M
further debugging may prove unreliable.^M
----- Backtrace -----^M
FAIL: gdb.dwarf2/debug-names.exp: gdb_breakpoint: set breakpoint at _start (GDB internal error)
...

There are 3 CUs:
...
$ readelf -wi outputs/gdb.dwarf2/debug-names/debug-names | grep @
  Compilation Unit @ offset 0x0:
  Compilation Unit @ offset 0xb:
  Compilation Unit @ offset 0x38:
...
but the CU list in .debug_names only contains one:
...
Contents of the .debug_names section:

Version 5
Augmentation string: 47 44 42 00  ("GDB")
CU table:
[  0] 0xb

TU table:
...

The length of the CU at 0xb is calculated in create_cus_from_debug_names_list as if the CU at 0x38 is also a part of it.

Then when doing full expansion, the actual CU header is read, and we find out the size is different:
...
#6  0x0000000000718b2f in dwarf2_per_cu_data::set_length (this=0x2cdc870, length=45, strict_p=true) at read.h:309
309           gdb_assert (m_length == length);
(gdb) p m_length
$1 = 56
(gdb) p length
$2 = 45
...
Comment 1 Tom de Vries 2022-08-07 07:02:04 UTC
A simple fix is, don't calculate length based on the CU list:
...
diff --git a/gdb/dwarf2/read.c b/gdb/dwarf2/read.c
index c65a8831bcb..7253c7c0d3e 100644
--- a/gdb/dwarf2/read.c
+++ b/gdb/dwarf2/read.c
@@ -4677,7 +4677,7 @@ create_cus_from_debug_names_list (dwarf2_per_bfd *per_bf
d,
                         " ignoring .debug_names."));
              return false;
            }
-         const ULONGEST length = sect_off_next - sect_off_prev;
+         const ULONGEST length = 0;
          dwarf2_per_cu_data_up per_cu
            = create_cu_from_index_list (per_bfd, &section, is_dwz,
                                         sect_off_prev, length);
...
Comment 2 Tom de Vries 2022-08-07 08:01:25 UTC
(In reply to Tom de Vries from comment #1)
> A simple fix is, don't calculate length based on the CU list:
> ...
> diff --git a/gdb/dwarf2/read.c b/gdb/dwarf2/read.c
> index c65a8831bcb..7253c7c0d3e 100644
> --- a/gdb/dwarf2/read.c
> +++ b/gdb/dwarf2/read.c
> @@ -4677,7 +4677,7 @@ create_cus_from_debug_names_list (dwarf2_per_bfd
> *per_bf
> d,
>                          " ignoring .debug_names."));
>               return false;
>             }
> -         const ULONGEST length = sect_off_next - sect_off_prev;
> +         const ULONGEST length = 0;
>           dwarf2_per_cu_data_up per_cu
>             = create_cu_from_index_list (per_bfd, &section, is_dwz,
>                                          sect_off_prev, length);
> ...

Tested this, no regressions.
Comment 5 Tom de Vries 2022-09-14 08:46:27 UTC
(In reply to Tom de Vries from comment #2)
> (In reply to Tom de Vries from comment #1)
> > A simple fix is, don't calculate length based on the CU list:
> > ...
> > diff --git a/gdb/dwarf2/read.c b/gdb/dwarf2/read.c
> > index c65a8831bcb..7253c7c0d3e 100644
> > --- a/gdb/dwarf2/read.c
> > +++ b/gdb/dwarf2/read.c
> > @@ -4677,7 +4677,7 @@ create_cus_from_debug_names_list (dwarf2_per_bfd
> > *per_bf
> > d,
> >                          " ignoring .debug_names."));
> >               return false;
> >             }
> > -         const ULONGEST length = sect_off_next - sect_off_prev;
> > +         const ULONGEST length = 0;
> >           dwarf2_per_cu_data_up per_cu
> >             = create_cu_from_index_list (per_bfd, &section, is_dwz,
> >                                          sect_off_prev, length);
> > ...
> 
> Tested this, no regressions.

Hmm, I may have forgot to test cc-with-debug-names board: https://sourceware.org/bugzilla/show_bug.cgi?id=29572