[gdb/symtab] Fix assert in set_length

When running the included test-case, we run into:
...
(gdb) break _start^M
read.h:309: internal-error: set_length: \
  Assertion `m_length == length' failed.^M
...

The problem is that while there are two CUs:
...
$ readelf -wi debug-names-missing-cu | grep @
  Compilation Unit @ offset 0x0:
  Compilation Unit @ offset 0x2d:
...
the CU table in the .debug_names section only contains the first one:
...
CU table:
[  0] 0x0
...

The incomplete CU table makes create_cus_from_debug_names_list set the size of
the CU at 0x0 to the actual size of both CUs combined.

This eventually leads to the assert, when we read the actual size from the CU
header.

While having an incomplete CU table in a .debug_names section is incorrect,
we need a better failure mode than asserting.

The easiest way to fix this is to set the length to 0 (meaning: unkown) in
create_cus_from_debug_names_list.

This makes the failure mode to accept the incomplete CU table, but to ignore
the missing CU.

It would be nice to instead reject the .debug_names index, and build a
complete CU list, but the point where we find this out is well after
dwarf2_initialize_objfile, so it looks rather intrusive to restart at that
point.

Tested on x86_64-linux.

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=29453